syntax = "proto3";

package subscription;

service SubscriptionService {
  rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);
  rpc Confirm (TokenRequest) returns (SimpleResponse);
  rpc Unsubscribe (TokenRequest) returns (SimpleResponse);
}

message SubscribeRequest {
  string email = 1;
  string city = 2;
  string frequency = 3;
}

message SubscribeResponse {
  bool success = 1;
  string token = 2;
}

message TokenRequest {
  string token = 1;
}

message SimpleResponse {
  bool success = 1;
} 